tests/ui/implied-bounds/cve-rs-lifetime-expansion.rs
// Regression test for #25860 — cve-rs lifetime expansion exploit
// This pattern was used by the cve-rs crate to implement arbitrary
// lifetime extension in 100% safe Rust code.

static UNIT: &'static &'static () = &&();

pub const fn lifetime_translator<'a, 'b, T: ?Sized>(
    _val_a: &'a &'b (),
    val_b: &'b T,
) -> &'a T {
    val_b
}

pub fn expand<'a, 'b, T: ?Sized>(x: &'a T) -> &'b T {
    let f: for<'x> fn(_, &'x T) -> &'b T = lifetime_translator;
    //~^ ERROR higher-ranked subtype error
    f(&&(), x)
}

fn main() {}
